tests/ui/type-alias-impl-trait/rpit_tait_equality_in_canonical_query.current.stderr
note: no errors encountered even though delayed bugs were created

note: those delayed bugs will now be shown as internal compiler errors

error: internal compiler error: {OpaqueTypeKey { def_id: DefId(get_rpit::{opaque#0}), args: [] }: OpaqueTypeDecl { hidden_type: OpaqueHiddenType { span: no-location (#0), ty: Alias(Opaque, AliasTy { args: [], def_id: DefId(Opaque::{opaque#0}) }) } }}
   |
   = 
           

error: internal compiler error: error performing ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: UserFacing }, value: ProvePredicate { predicate: Binder { value: ProjectionPredicate(AliasTy { args: [FnDef(DefId(get_rpit), []), ()], def_id: DefId(ops::function::FnOnce::Output) }, Term::Ty(Alias(Opaque, AliasTy { args: [], def_id: DefId(Opaque::{opaque#0}) }))), bound_vars: [] } } }
  --> $DIR/rpit_tait_equality_in_canonical_query.rs:31:5
   |
LL |     query(get_rpit);
   |     ^^^^^^^^^^^^^^^
   |

  --> $DIR/rpit_tait_equality_in_canonical_query.rs:31:5
   |
LL |     query(get_rpit);
   |     ^^^^^^^^^^^^^^^

query stack during panic:
end of query stack
error: aborting due to 2 previous errors

